[#15381] Fixed the specific modules to work properly with jacoco arg line.