@@ -2772,7 +2772,7 @@
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-surefire-plugin</artifactId>
                   <configuration>
-                     <argLine combine.self="override">${forkJvmArgs} ${jacoco.agent.argLine}</argLine>
+                     <argLine combine.self="override">${forkJvmArgs} ${testjvm.jdkSpecificArgs} -Djdk.attach.allowAttachSelf=true ${jacoco.agent.argLine}</argLine>
                   </configuration>
                </plugin>
 
